Fix a couple of book references

--- a/README.adoc
+++ b/README.adoc
@@ -2480,8 +2480,8 @@ Thanks for all the suggestions and the support! Together we can make a resource 
 
 Many people, books, presentations, articles and other style guides influenced the community Clojure style guide. Here are some of them:
 
-* https://en.wikipedia.org/wiki/The_Elements_of_Style[The Elements of Style]
-* https://en.wikipedia.org/wiki/The_Elements_of_Programming_Style[The Elements of Programming Style]
+* https://en.wikipedia.org/wiki/The_Elements_of_Style["The Elements of Style"]
+* https://en.wikipedia.org/wiki/The_Elements_of_Programming_Style["The Elements of Programming Style"]
 * https://www.python.org/dev/peps/pep-0008/[Python Style Guide (PEP-8)]
 * https://rubystyle.guide/[Community Ruby Style Guide]
 * https://clojure.org/community/contrib_howto#_coding_guidelines[Clojure Library Coding Guidelines]
