--- a/README.adoc
+++ b/README.adoc
@@ -695,7 +695,7 @@ be concise, but won't carry much meaning).
 But what to do about all the other namespaces out there that don't have idiomatic aliases? Well, you better be consistent in your approach to deriving aliases for them,
 otherwise the people working on a shared Clojure codebase are going to experience a great deal of confusion. Here are a few rules that you should follow.footnote:[These guidelines are based on a https://stuartsierra.com/2015/05/10/clojure-namespace-aliases[blog post] by Stuart Sierra.]
 
-. Make the alias the same as the namespace name with the leading parts removed.
+1. Make the alias the same as the namespace name with the leading parts removed.
 
 [source,clojure]
 ----
@@ -705,7 +705,7 @@ otherwise the people working on a shared Clojure codebase are going to experienc
    [clojure.string :as string]))
 ----
 
-. Keep enough trailing parts to make each alias unique.
+2. Keep enough trailing parts to make each alias unique.
 
 [source,clojure]
 ----
@@ -715,7 +715,7 @@ otherwise the people working on a shared Clojure codebase are going to experienc
 
 TIP: Yes, namespace aliases can have dots in them. Make good use of them.
 
-. Eliminate redundant words such as "core" and "clj" in aliases.
+3. Eliminate redundant words such as "core" and "clj" in aliases.
 
 [source,clojure]
 ----
