--- a/README.adoc
+++ b/README.adoc
@@ -610,6 +610,23 @@ Avoid single-segment namespaces.
 (ns example)
 ----
 
+Namespaces exist to disambiguate names. Using a single segment
+namespace puts you in direct conflict with everyone else using single
+segment namespaces, thus making it more likely you will conflict with
+another code base.
+
+In practice this means that libraries should never use single-segment
+namespace to avoid namespace conflicts with other libraries.
+Within your own private app of course, you can do whatever you like.
+
+TIP: It's common practice to use the convention `domain.library-name`
+or `library-name.core` for libraries with a single namespace in them.
+Read on for more coverage of the namespace naming topic.
+
+There are https://github.com/bbatsov/clojure-style-guide/pull/100[other reasons]
+why might want to avoid single-segment namespaces, so you should
+think long and hard before making any use of them.
+
 === Namespace Segments Limit [[namespace-segments-limit]]
 
 Avoid the use of overly long namespaces (i.e., more than 5 segments).
