--- a/README.adoc
+++ b/README.adoc
@@ -2308,7 +2308,7 @@ simpler and more explicit to use the `:see-also` metadata instead.
 === `:no-doc`
 
 Documentation tools like https://github.com/weavejester/codox#metadata-options[Codox] like https://github.com/cljdoc/cljdoc/blob/master/doc/userguide/for-library-authors.adoc#hiding-namespaces-vars-in-documentation[cljdoc] recognize `:no-doc` metadata.
-When a var or a namespace has `:no-doc` metadata, it indicates to these tools that it should excluded from generated API docs.
+When a var or a namespace has `:no-doc` metadata, it indicates to these tools that it should be excluded from generated API docs.
 
 To exclude an entire namespace from API docs:
 [source,clojure]
